# hair-swap-tools

./: .gitignore  README.md  hair_swap_api.py  pyproject.toml
hair_swap_api/: infer.py  pipeline.py  pipeline_cn.py
hair_swap_api/diffusers/: configuration_utils.py
hair_swap_api/diffusers/pipelines/: pipeline_utils.py
hair_swap_api/diffusers/schedulers/: scheduling_utils.py
hair_swap_api/diffusers/utils/: logging.py
hair_swap_api/ref_encoder/: attention_processor.py  latent_controlnet.py  reference_control.py  reference_unet.py
hair_transfer/: .gitignore  __init__.py  gradio_demo_full.py  infer_full.py  main.py  requirements.txt  train_stage1.py  train_stage2.py
hair_transfer/configs/: hair_transfer.yaml
hair_transfer/diffusers/pipelines/: pipeline_utils.py
hair_transfer/diffusers/pipelines/blip_diffusion/: blip_image_processing.py
hair_transfer/diffusers/pipelines/controlnet/: pipeline_controlnet_sd_xl.py  pipeline_controlnet_sd_xl_img2img.py
hair_transfer/diffusers/pipelines/stable_diffusion_xl/: pipeline_flax_stable_diffusion_xl.py
hair_transfer/diffusers/schedulers/: scheduling_utils.py  scheduling_utils_flax.py
hair_transfer/diffusers/utils/: logging.py
hair_transfer/ref_encoder/: attention_processor.py  latent_controlnet.py  reference_control.py  reference_unet.py
hair_transfer/utils/: pipeline.py  pipeline_cn.py
