[project]
name = "hair_swap"
version = "0.1.0"
description = "hair_swap"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.10.1",
    "diffusers==0.31.0",
    "einops>=0.8.1",
    "huggingface-hub==0.25.2",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "omegaconf==2.3.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "torchaudio==2.7.1",
    "transformers==4.45.2",
]

[tool.setuptools]
py-modules = ["hair_swap_api"]

[tool.setuptools.packages.find]
include = ["hair_transfer*"]